Fix card margins and icon alignment

--- a/src/registrar/assets/src/sass/_theme/_cards.scss
+++ b/src/registrar/assets/src/sass/_theme/_cards.scss
@@ -7,10 +7,7 @@
     border-width: 1px;
     border-radius: 0.25rem;
     cursor: pointer;
-}
-
-.usa-card__header {
-    // padding: 2rem;
+    vertical-align: bottom;
 }
 
 .usa-card__heading {
